--- a/main.tex
+++ b/main.tex
@@ -247,6 +247,8 @@
 \bibitem{Ehrenfest}Ehrenfest, P., Ehrenfest, T., \& Moravcsik, M. The conceptual foundations of the statistical approach in mechanics.
 \bibitem{FermiPastaUlam} Fermi, E., Pasta, J., Ulam, S. (1955). Collected Papers of Enrico Fermi, Vol II, University of Chicago press, Chicago 1965.
 \bibitem{Birkhoff}Birkhoff, G. (1931). Proof of the Ergodic Theorem. Proceedings Of The National Academy Of Sciences, 17(12), 656-660. http://dx.doi.org/10.1073/pnas.17.2.656
+\bibitem{SusskindQuantum}Susskind, L., \& Friedman, A. (2015). Quantum mechanics. UK: Penguin Books.
+\bibitem{ZettiliQuantum}Zettili, N. (2009). Quantum mechanics : concepts and applications.
 \end{thebibliography}
 
 
